syntax = "proto3";

option csharp_namespace = "Profilum.AccountService";

package Profilum.AccountService;

// The user service definition.
service AccountService {

  rpc GetAllAccounts (Empty) returns (stream AccountFullReply);
  
  rpc GetAccount (AccountGetRequest) returns (AccountFullReply);

  rpc CreateAccount (AccountCreateRequest) returns (AccountFullReply);

  rpc UpdateAccount (AccountCreateRequest) returns (AccountFullReply);

  rpc DeleteAccount (AccountGetRequest) returns (AccountReply);

  rpc DeleteAllAccounts (Empty) returns (AccountReply);
}

message Empty {
}

message AccountGetRequest {
  int64 id = 1;
}

message AccountCreateRequest {
	int64 id = 1;
	string name = 2;
}

message AccountReply {
  int32 replyStateCode = 1;
}

message AccountFullReply {
  int32 replyStateCode = 1;
  int64 id = 2;
  string name = 3;
}